--- a/css/ui.css
+++ b/css/ui.css
@@ -316,3 +316,6 @@ textarea{width:100%; height:300px;
 .privacy{display:inline-block;color:#FFFFFF;font-family:"BMDOHYEON", sans-serif;text-align: center; font-weight: bold; font-size:15px; position: absolute; top:160px;left:800px;}
 .terms{display:inline-block;color:#FFFFFF;font-family:"BMDOHYEON", sans-serif;text-align: center; font-weight: bold; font-size:15px; position: absolute; top:160px;left:1000px;}
 .copyright{display:inline-block;color:#FFFFFF;font-family:"BMDOHYEON", sans-serif;text-align: center; font-weight: bold; font-size:15px; position: absolute; top:200px;left:700px;}
+
+
+/*width*/
